# microstructure-engine

./: .gitignore  README.md
cpp/: CMakeLists.txt  vcpkg.json
cpp/apps/: feed_dump.cpp
cpp/include/msengine/: binance_feed.hpp  feed.hpp  order_book.hpp  persister.hpp  pipeline.hpp  rolling_window.hpp  signal_engine.hpp  spsc_queue.hpp
cpp/src/: binance_feed.cpp  order_book.cpp  persister.cpp
cpp/tests/: binance_parser_test.cpp  order_book_test.cpp  persister_test.cpp  pipeline_integration_test.cpp  signal_engine_test.cpp  spsc_queue_test.cpp
docs/: ARCHITECTURE.md  REQUIREMENTS.md
